{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 4,
  "lineage": "704c4f83-98ff-d264-292f-e9b49b7d8e58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08064e6678bd59953",
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:elastic-ip/eipalloc-08064e6678bd59953",
            "domain": "vpc",
            "id": "eipalloc-08064e6678bd59953",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-142-32-137.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.32.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:internet-gateway/igw-0d926eb1abb8b130c",
            "id": "igw-0d926eb1abb8b130c",
            "owner_id": "347620126556",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "vpc_id": "vpc-02ec290473a6e04ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08064e6678bd59953",
            "association_id": "eipassoc-058bb67e19342374b",
            "connectivity_type": "public",
            "id": "nat-0ef83fb716401933b",
            "network_interface_id": "eni-0d081c4077b72ae96",
            "private_ip": "10.0.76.45",
            "public_ip": "18.142.32.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01732ccd1fa6a8143",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-037ae78a16264b805",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ef83fb716401933b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec290473a6e04ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:route-table/rtb-0e78747da30edf19b",
            "id": "rtb-0e78747da30edf19b",
            "owner_id": "347620126556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d926eb1abb8b130c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec290473a6e04ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e3d261e0aafcf6e",
            "route_table_id": "rtb-0e78747da30edf19b",
            "subnet_id": "subnet-01732ccd1fa6a8143"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f36ef100f98aad99",
            "route_table_id": "rtb-0e78747da30edf19b",
            "subnet_id": "subnet-0a19fbf8847235585"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:subnet/subnet-05c7672fd81c51f22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c7672fd81c51f22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347620126556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "vpc_id": "vpc-02ec290473a6e04ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:subnet/subnet-060172853e4ee9859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060172853e4ee9859",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347620126556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "vpc_id": "vpc-02ec290473a6e04ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:subnet/subnet-01732ccd1fa6a8143",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01732ccd1fa6a8143",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "347620126556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "vpc_id": "vpc-02ec290473a6e04ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:subnet/subnet-0a19fbf8847235585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a19fbf8847235585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "347620126556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "vpc_id": "vpc-02ec290473a6e04ad"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:347620126556:vpc/vpc-02ec290473a6e04ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a82b8d41b666ca31",
            "default_route_table_id": "rtb-05bd9f6aec3f3a268",
            "default_security_group_id": "sg-06ae3a17a008ddaed",
            "dhcp_options_id": "dopt-022591e3ac8080da3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ec290473a6e04ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05bd9f6aec3f3a268",
            "owner_id": "347620126556",
            "tags": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "terraform-jmr",
              "Environment": "production",
              "Name": "metafarms-higher-env-vpc",
              "Release": "latest"
            }
          }
        }
      ]
    }
  ]
}